# DroneTelemetry

./: CMakeLists.txt  DroneModel.cpp  DroneModel.h  DroneSimulator.cpp  DroneSimulator.h  DroneTelemetry.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MovementStrategy.h  Observer.h  README.md  SimulatorFactory.h  main.cpp  mainWindows.cpp
test/: test_model.cpp  test_simulator.cpp  test_strategy.cpp
